# Cuadernos-Jupyter

./: .gitignore  README.md  basic_example.py  functionpartida.py  pyproject.toml
Asys/Convolucion/: Convolucion animada.py  Convolucion-No-gittear.py  convolucion_withoutClasses.py
Asys/Espacio Complejo/: Espacio Complejo.py
Asys/Transformada Fourier/: Ejemplo1.ipynb
Asys/Variable Compleja/: VariableCompleja - parte real e imaginaria.ipynb
Asys/Variable Compleja/.ipynb_checkpoints/: Variable Compleja - Limite-checkpoint.ipynb  VariableCompleja - Derivada-checkpoint.ipynb  VariableCompleja - parte real e imaginaria-checkpoint.ipynb
Asys/mathAnimation/: mathAnimation.py  sliderExample.py
Cuadernos-Jupyter/: ASYS-Convolucion.ipynb  Variable Compleja - Limite.ipynb
Experimentos/: classes.py
JupyterNotebook/: Untitled.ipynb
JupyterNotebook/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Python/: ReconocimientoTexto.py
Python/Curvas_de_lissojau/: Curvas_de_lissojau.py  something.py
Python/Signals/: Signals.py
