[tool.poetry]
name = "cuadernos-jupyter"
version = "0.1.0"
description = ""
authors = ["Federico Santana <fede.santana@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
jupyterlab = "^1.1"
numpy = "^1.17"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.730.0"
pycodestyle = "^2.5"
rope = "^0.14.0"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
